# false-nikita-bot

./: Cargo.toml  Dockerfile  README.md
src/: cloud_run.rs  consts.rs  database.rs  keyboard.rs  logging.rs  main.rs  parse_message.rs  replies.rs  video_note.rs  webhook.rs
