[package]
name = "false-nikita-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.12.2", features = ["macros", "webhooks", "webhooks-axum"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
